# real-esate-price-forecasting

./: pyproject.toml
forecasting-service/: pyproject.toml
forecasting-service/src/forecasting_service/: __init__.py  config.py
forecasting-service/src/forecasting_service/data/: collector.py
forecasting-service/src/forecasting_service/datasets/: intermediate_rooms_1_20260302_210027.csv  intermediate_rooms_1_20260303_005146.csv  intermediate_rooms_2_20260303_014102.csv  intermediate_rooms_studio_20260302_235620.csv
forecasting-service/src/forecasting_service/parsers/cian/: constants.py  detail_parser.py  models.py  page_parser.py  parser.py
forecasting-service/src/forecasting_service/parsers/common/: browser.py  rate_limiter.py
forecasting-service/src/forecasting_service/scripts/: collect_dataset.py
main-backend/: pyproject.toml
main-backend/src/main_backend/: __init__.py  config.py
