[project]
name = "forecasting-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mercury", email = "122353133+kostya1102m@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
forecasting-service = "forecasting_service:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
