[project]
name = "forecasting-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mercury", email = "122353133+kostya1102m@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cianparser>=1.0.4",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "selenium>=4.41.0",
    "selenium-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
forecasting-service = "forecasting_service:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
