[project]
name = "main-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mercury", email = "122353133+kostya1102m@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.134.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
main-backend = "main_backend:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
